third_party/move/move-bytecode-verifier/transactional-tests/tests/signature/vector_ops_invalid_type_args.exp
processed 3 tasks
task 0 lines 1-6:  run [script]
Error: error: expected `>`, found `,`
  ┌─ test:4:18
  │
4 │     vec_pack <u64, bool>, 0
  │                  ^


task 1 lines 10-15:  run [script]
Error: error: expected type
   ┌─ test:13:15
   │
13 │     vec_pack <>, 0
   │               ^


task 2 lines 19-24:  run [script]
Error: Script execution failed with VMError: {
    major_status: INVALID_SIGNATURE_TOKEN,
    sub_status: None,
    location: script,
    indices: [],
    offsets: [],
}
