third_party/move/move-bytecode-verifier/transactional-tests/tests/signature/vector_ops_invalid_type_args.masm
//# run
script
entry public fun main()
    vec_pack <u64, bool>, 0
    pop
    ret



//# run
script
entry public fun main()
    vec_pack <>, 0
    pop
    ret



//# run
script
entry public fun main()
    vec_pack <&u64>, 0
    pop
    ret